v114
    -Add pdf lzw, gif, dBase, pdf bitmap, aiff, ascii85 parser.
    -Change Analyzer and Codec so that parent type is passed on in recursion.
    -Move LZSS to separate header
    -Disable zlib parser if parent type is ZLIB
    -Enable pdf bitmap parser only if parent type is ZLIB
v113
    -Update build script
    -Add default, bmp, text (very agressive), DEC Alpha, mrb (.hlp),
     exe, zlib, nes rom, jpeg, wav, pnm and MS-Zip (.cab) parsers.
    -Add analyzer (detect replacement)
    -Heavy cleanup of code
    -Enable MRBR4, TXTUTF8 and BIGTEXT filters
v112
    -More refactoring of source code
v111
    -Refactored source code
    -Add build script for Windows
v110
    -In BZip2 recompression add a new parameter to BZ2_bzCompressInit API.
     In BZip2 v1.0.3 maxLen was changed from 20 to 17. Test 20 if 17 fails.
     This is needed for older archives or recompression fails.
    -Revert minimum dictionary frequency to 19.
    -Some cleanup.
    -Change tempFile memory from 16MB to 64MB
    -Add english.dict from fxcm
v109
    -If minimum dictionary frequency=0 then use only static dictionary (-e0,dictionary)
    -Add verbose levels 0-3.
    -Remove some text colors.
v108
    -Merge VLI fix.
    -Fix BZ detection https://encode.su/threads/1464-Paq8pxd-dict?p=83831&viewfull=1#post83831
v107
    -Fix detection and compression on some jpeg files.
v106
    -Change mixer, so that there is minimum limit for update.
    -Add more StationaryMap contexts to jpegModel
    -Use larger update limit for some mixer context in jpegModel
    -Update lstm to v3
v105
    -Fix CD detection.
    -Fix MRB detection.
v104
    -in textModel also use regular word in stemmer
    -in wordModel, textModel use upper char flag from wrt 
    -DEC Alpha block-end fix from paq8px_v202
v103
    -in textModel use decoded word in stemmer to get real word type
v102
    -change ContextMap
    -adjust jpegModel mixer update
    -one context in WordModel
    -change indirectModel