@@ -18,6 +18,7 @@ dbaseparser     2     DBASE
 pdfbiparser     2     IMAGE1 IMAGE8
 aiffparser      2     AUDIO
 ascii85parser   2     BASE85
+base641parser   2     BASE64
 
 Priority  - is set by parser and type is returned by parser.
 Type - is what the parser reports to "analyzer" if something was found.
